# epp22-23-final_project

./: .gitignore  .pre-commit-config.yaml  Biblio.bib  README.md  adoptions_cumulative_raw.csv  bass_model.py  environment.yml  model_and_results.tex  pyproject.toml  setup.cfg
paper/: final_project.tex  final_project_pres.tex  task_paper.py
scipy-1.7.1/scipy/_lib/: _ccallback_c.c  _test_deprecation_call.c  _test_deprecation_def.c  _test_deprecation_def.h  messagestream.c
scipy-1.7.1/scipy/cluster/: _hierarchy.c  _optimal_leaf_ordering.c  _vq.c
scipy-1.7.1/scipy/fftpack/: convolve.c
scipy-1.7.1/scipy/interpolate/: _bspl.c  _ppoly.c  interpnd.c
scipy-1.7.1/scipy/linalg/: _decomp_update.c  _matfuncs_sqrtm_triu.c  _solve_toeplitz.c  cython_blas.c  cython_lapack.c
scipy-1.7.1/scipy/optimize/: _bglu_dense.c  _group_columns.c
scipy-1.7.1/scipy/signal/: _max_len_seq_inner.c  _peak_finding_utils.c  _sosfilt.c  _spectral.c  _upfirdn_apply.c
scipy-1.7.1/scipy/sparse/: _csparsetools.c
scipy-1.7.1/scipy/spatial/: _hausdorff.c  _voronoi.c  ckdtree.cxx  qhull.c
scipy-1.7.1/scipy/special/: _comb.c  _ellip_harm_2.c  _ellip_harm_2.h  _test_round.c  _ufuncs.h  _ufuncs_cxx.cxx  _ufuncs_cxx.h  cython_special.h
scipy-1.7.1/scipy/stats/: _qmc_cy.cxx  _sobol.c  _stats.c  biasedurn.cxx
src/final_project/: config.py
src/final_project/analysis/: task_analysis.py
src/final_project/data/: all_CW.csv  all_CWY.csv  all_YEAR.csv  all_day.csv  all_hex.csv  api_data.csv  (+1 more)
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
(+43 files in other folders)
